# struck

./: CMakeLists.txt  README.md  config.txt  track_struck.py  track_struck_video.py
service/: CMakeLists.txt  StruckTracker.cpp  StruckTracker.h
src/: CMakeLists.txt  Sampler.cpp
standalone/: CMakeLists.txt
